--- a/public/listuser.html
+++ b/public/listuser.html
@@ -2,19 +2,137 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>사용자 리스트 테스트</title>
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./stylesheets/semantic.min.css"
+    />
+    <script type="text/javascript" src="./javascripts/semantic.min.js"></script>
+    <title>사용자 리스트</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+
+      html {
+        width: 100%;
+        height: 100%;
+      }
+
+      body {
+        width: 100%;
+        height: 100%;
+        color: #000;
+        background-color: #fff;
+      }
+
+      .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+      }
+
+      #cardbox {
+        width: 70%;
+      }
+
+      #iconImage {
+        display: inline;
+      }
+
+      #titleText {
+        font-size: 1.4em;
+        font-weight: bold;
+        color: #777;
+      }
+
+      #contentsText {
+        color: #999;
+      }
+
+      #form1 {
+        padding: 1em;
+      }
+
+      .row {
+        height: 3em;
+      }
+
+      .col1 {
+        width: 5em;
+      }
+
+      .inputbox {
+        width: 20em;
+      }
+
+      #buttonContainer {
+        padding-top: 0.6em;
+        text-align: right;
+      }
+
+      @media screen and (min-width: 320px) and (max-width: 768px) {
+        #cardbox {
+          width: 90%;
+        }
+
+        label[id="contentsText"] {
+          display: none;
+        }
+      }
+
+      @media screen and (min-width: 768px) and (max-width: 979px) {
+        #cardbox {
+          width: 80%;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>사용자 리스트</h1>
-    <br />
-    <form method="post" action="/process/listuser">
-      <table>
-        <tr>
-          <td><label>아래 [전송] 버튼을 누르세요.</label></td>
-        </tr>
-      </table>
+    <div class="container">
+      <div id="cardbox" class="ui blue fluid card">
+        <div class="content">
+          <div class="left floated author">
+            <img
+              id="iconImage"
+              class="ui avatar image"
+              src="./images/userIcon.png"
+            />
+          </div>
+          <div>
+            <div id="titleText" class="header">사용자 리스트</div>
+            <div id="contentsText" class="description">
+              아래 [조회] 버튼을 누르세요.
+            </div>
+          </div>
+        </div>
 
-      <input type="submit" value="전송" name="" />
-    </form>
+        <form id="form1" method="post" action="/process/listuser">
+          <table>
+            <tr class="row" align="center" valign="middle">
+              <td id="buttonContainer">
+                <input
+                  id="submitButton"
+                  class="ui primary button"
+                  type="submit"
+                  value="조회"
+                  name=""
+                />
+              </td>
+            </tr>
+          </table>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
