--- a/public/photo.html
+++ b/public/photo.html
@@ -2,85 +2,212 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./stylesheets/semantic.min.css"
+    />
+    <script type="text/javascript" src="./javascripts/semantic.min.js"></script>
     <title>나의 메모</title>
-  </head>
-  <body>
-    <h1>나의 메모</h1>
-    <br />
-    <form method="post" enctype="multipart/form-data" action="/process/photo">
-      <table>
-        <tr>
-          <td><label>작성자</label></td>
-          <td><input type="text" name="id" /></td>
-        </tr>
-        <tr>
-          <td><label>작성일시</label></td>
-          <td><input type="text" id="currentDate" name="time" /></td>
-        </tr>
-        <tr>
-          <td><label>내용</label></td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <textarea
-              name="textfield"
-              style="width:240px; height:100px"
-            ></textarea>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <label>사진</label
-            ><img
-              id="preview"
-              src="#"
-              alt="미리보기"
-              style="width:100px;height:auto"
-            />
-          </td>
-          <td><input type="file" id="photoUpload" name="photo" /></td>
-        </tr>
-      </table>
-
-      <input type="submit" value="저장" name="submit" />
-      <input type="button" value="닫기" name="submit" />
-    </form>
-    <script
-      type="text/javascript"
-      src="http://code.jquery.com/jquery-2.1.0.min.js"
-    ></script>
-    <script type="text/javascript">
-      // 현재 날짜 계산
-      var date = new Date();
-      var currentDate =
-        date.getFullYear() +
-        "-" +
-        (date.getMonth() + 1) +
-        "-" +
-        date.getDate() +
-        " ";
-      var currentTime = date.getHours() + ":" + date.getMinutes();
-
-      document.getElementById("currentDate").value = currentDate + currentTime;
-
-      // 미리 보기
-      $(function() {
-        $("#photoUpload").on("change", function() {
-          readURL(this);
-        });
-      });
-
-      function readURL(input) {
-        if (input.files && input.files[0]) {
-          var reader = new FileReader();
-
-          reader.onload = function(e) {
-            $("#preview").attr("src", e.target.result);
-          };
-
-          reader.readAsDataURL(input.files[0]);
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      html {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        width: 100%;
+        height: 100%;
+        color: #000;
+        background-color: #fff;
+      }
+      .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+      }
+      #cardbox {
+        width: 70%;
+      }
+      #iconImage {
+        display: inline;
+      }
+      #titleText {
+        font-size: 1.4em;
+        font-weight: bold;
+        color: #777;
+      }
+      #contentsText {
+        color: #999;
+      }
+      #form1 {
+        padding: 1em;
+      }
+      .row {
+        height: 3em;
+      }
+      .col1 {
+        height: 3em;
+      }
+      .inputbox {
+        width: 20em;
+      }
+      #buttonContainer {
+        padding-top: 3em;
+        padding-right: 1em;
+        text-align: right;
+      }
+      @media screen and (min-width: 320px) and (max-width: 768px) {
+        #cardbox {
+          width: 90%;
+        }
+        label[id="contentsText"] {
+          display: none;
         }
       }
-    </script>
+      @media screen and (min-width: 768px) and (max-width: 979px) {
+        #cardbox {
+          width: 80%;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div id="cardbox" class="ui raised segment">
+        <a class="ui blue ribbon label">나의 메모</a>
+        <form
+          id="form1"
+          method="post"
+          enctype="multipart/form-data"
+          action="/process/photo"
+        >
+          <table>
+            <tr class="row">
+              <td class="col1"><label id="contentsText">작성자</label></td>
+              <td class="col2" colspan="2">
+                <div class="ui input">
+                  <input
+                    class="inputbox"
+                    type="text"
+                    name="id"
+                    placeholder="작성자"
+                  />
+                </div>
+              </td>
+            </tr>
+            <tr class="row">
+              <td class="col1"><label id="contentsText">작성일시</label></td>
+              <td class="col2" colspan="2">
+                <div class="ui input">
+                  <input
+                    class="inputbox"
+                    id="currentDate"
+                    type="text"
+                    name="time"
+                  />
+                </div>
+              </td>
+            </tr>
+            <tr class="row">
+              <td class="col1"><label id="contentsText">내용</label></td>
+              <td class="col1" colspan="2">
+                <div class="ui input">
+                  <textarea
+                    class="inputbox"
+                    name="textfield"
+                    placeholder="내용을 입력하세요."
+                    style="height: 10em"
+                  ></textarea>
+                </div>
+              </td>
+            </tr>
+            <tr class="row">
+              <td class="col1">
+                <label id="contentsText">사진</label>
+              </td>
+              <td class="col1">
+                <img
+                  id="preview"
+                  src="#"
+                  alt="미리보기"
+                  style="width:100px;height:auto"
+                />
+                <input type="file" id="photoUpload" name="photo" />
+              </td>
+            </tr>
+            <tr valign="baseline">
+              <td></td>
+              <td id="buttonContainer" align="right">
+                <input
+                  id="submitButton"
+                  class="ui primary button"
+                  type="submit"
+                  value="저장"
+                  name="submit"
+                />
+                <input
+                  id="cancelButton"
+                  class="ui primary button"
+                  type="button"
+                  value="닫기"
+                  name="cancel"
+                />
+              </td>
+            </tr>
+          </table>
+        </form>
+        <script
+          type="text/javascript"
+          src="http://code.jquery.com/jquery-2.1.0.min.js"
+        ></script>
+        <script type="text/javascript">
+          // 현재 날짜 계산
+          var date = new Date();
+          var currentDate =
+            date.getFullYear() +
+            "-" +
+            (date.getMonth() + 1) +
+            "-" +
+            date.getDate() +
+            " ";
+          var currentTime = date.getHours() + ":" + date.getMinutes();
+
+          document.getElementById("currentDate").value =
+            currentDate + currentTime;
+
+          // 미리 보기
+          $(function() {
+            $("#photoUpload").on("change", function() {
+              readURL(this);
+            });
+          });
+
+          function readURL(input) {
+            if (input.files && input.files[0]) {
+              var reader = new FileReader();
+
+              reader.onload = function(e) {
+                $("#preview").attr("src", e.target.result);
+              };
+
+              reader.readAsDataURL(input.files[0]);
+            }
+          }
+        </script>
+      </div>
+    </div>
   </body>
 </html>
