--- a/public/amateurPirates.html
+++ b/public/amateurPirates.html
@@ -45,7 +45,7 @@
 
 <body>
   <div class="webgl-content">
-    <a href="/profile" class="btn btn-default btn-sm">메인화면으로</a>
+    <a href="/" class="btn btn-default btn-sm">메인화면으로</a>
     <div id="gameContainer" style="width: 960px; height: 600px"></div>
     <div class="footer">
       <div class="webgl-logo"></div>
