--- a/public/amateurPirates.html
+++ b/public/amateurPirates.html
@@ -33,13 +33,13 @@
     }
   </style>
 
-  <link rel="shortcut icon" href="./TemplateData/favicon.ico">
-  <link rel="stylesheet" href="./TemplateData/style.css">
-  <script src="./TemplateData/UnityProgress.js"></script>
-  <script src="./Build/UnityLoader.js"></script>
+  <link rel="shortcut icon" href="/public/amateurPirates/TemplateData/favicon.ico">
+  <link rel="stylesheet" href="/public/amateurPirates/TemplateData/style.css">
+  <script src="/public/amateurPirates/TemplateData/UnityProgress.js"></script>
+  <script src="/public/amateurPirates/Build/UnityLoader.js"></script>
   <script>
     // var gameInstance = UnityLoader.instantiate("gameContainer", "./Build/webglbulid.json", {onProgress: UnityProgress});
-    var gameInstance = UnityLoader.instantiate("gameContainer", "./Build/webglbulid.json", { onProgress: UnityProgress });
+    var gameInstance = UnityLoader.instantiate("gameContainer", "/public/amateurPirates/Build/webglbulid.json", { onProgress: UnityProgress });
   </script>
 </head>
 
